bk_ida/gccida/g1/gen_split_950
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_950/src/insn-emit.c:8495:30: error: use of undeclared identifier 'machine_mode'
v1 = ix86_force_to_memory( ( machine_mode)*( ( unsigned __int8 *)operands[1] + 2), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_950/src/insn-emit.c:8497:30: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_e( FLOAT, ( machine_mode)*( ( unsigned __int8 *)*operands + 2), v1); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_950/src/insn-emit.c:8501:26: error: use of undeclared identifier 'machine_mode'
ix86_free_from_memory( ( machine_mode)*( ( unsigned __int8 *)operands[1] + 2)); 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_split_950/src/obj/insn-emit.o] Error 1
